--- a/orange.html
+++ b/orange.html
@@ -8,10 +8,11 @@
 
   <script src="javascripts/vendor/jquery.js"></script>
   <script src="javascripts/src/typed-objects.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <!-- feel free to replace typed-objects with the plain-old-js-objects,
   depending on how you implement your view.js -->
   <script src="javascripts/src/view.js"></script>
-  
+
 
 </head>
 <body>
@@ -21,6 +22,7 @@
 
 <div class="grove">
   <button class="plant">Plant Orange Tree</button>
+
 </div>
 
 <div id="orange-tree-template">
