--- a/orange.html
+++ b/orange.html
@@ -4,15 +4,11 @@
   <title>Orange Trees</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/application.css">
-
-
-  <script src="javascripts/vendor/jquery.js"></script>
   <script src="javascripts/src/typed-objects.js"></script>
+  <script src="http://codeorigin.jquery.com/jquery-2.0.3.js"></script>
+  <script src="javascripts/application.js"></script>
   <!-- feel free to replace typed-objects with the plain-old-js-objects,
   depending on how you implement your view.js -->
-  <script src="javascripts/src/view.js"></script>
-  
-
 </head>
 <body>
 <header>
@@ -26,8 +22,8 @@
 <div id="orange-tree-template">
   <div class="orange-tree">
     <h2>Tree Name</h2>
-    <p class="age">0</p>
-    <p class="fruit-count">0</p>
+    <p><span>Age: </span><span class="age">0</span></p>
+    <p><span>Fruit Count: </span><span class="fruit-count">0</span></p>
     <button class="pick">Pick!</button>
     <button class="age">Age!</button>
     <div class="display-tree-big"><div>
